# terrustrial

./: .gitignore  Cargo.toml  MIT  README.md  out.txt  samples.csv
benches/: ordinary_kriging.rs
src/: lib.rs
src/declustering/: grid.rs  mod.rs
src/decomposition/: lu.rs  mod.rs
src/decomposition/modifiers/: mean_transform.rs  mod.rs
src/decomposition/solved_systems/: negative_weight_filtered_system.rs  ok_system.rs  sk_system.rs
src/estimators/: generalized_sequential_indicator_kriging.rs  generalized_sequential_kriging.rs  inverse_distance.rs  mod.rs  simple_kriging.rs
src/geometry/: aabb.rs  ellipsoid.rs  elliptical_cylindar.rs  mod.rs  support.rs  template.rs  tolerance.rs  variogram_tolerance.rs  variogram_tolerance_geometry.rs
src/group_operators/: generalized_sequential_indicator_kriging.rs  generalized_sequential_kriging.rs  inverse_distance.rs  mod.rs
src/kriging/: generalized_sequential_indicator_kriging.rs  generalized_sequential_kriging.rs  greedy_generalized_sequential_kriging.rs  mod.rs  simple_kriging.rs
src/node_providers/: mod.rs  point_group.rs  volume_group.rs
src/simulation/: gsgs.rs  hosim.rs  lu.rs  mod.rs  sgs.rs
src/spatial_database/: coordinate_system.rs  group_provider.rs  mod.rs  normalized.rs  zero_mean.rs
src/spatial_database/gridded_databases/: complete_grid.rs  gridded_data_base_queary_engine.rs  gridded_data_base_query_engine.rs  gridded_data_base_query_engine_mut.rs  gridded_db.rs  incomplete_grid.rs  mod.rs
src/spatial_database/qbvh/: conditioning_data_collector.rs  mod.rs  n_best_first.rs  point_set.rs  simd_n_best_first_visitor.rs  weighted_value.rs
src/spatial_database/rtree_point_set/: mod.rs  point_set.rs  support_set.rs
src/spatial_database/value_modifiers/: mod.rs  zero_mean_transformer.rs
src/systems/: lu.rs  mod.rs  system_builder.rs
src/systems/modifiers/: mean_transform.rs  mod.rs
src/systems/solved_systems/: mod.rs  negative_weight_filtered_system.rs  ok_system.rs  sk_system.rs
src/variography/: experimental_variogram.rs  mod.rs
src/variography/experimental/: cpu_calculator.rs  cuda_calculator.rs  gpu_vgram.rs  kernel_bvh.cu  kernel_bvh.ptx  mod.rs
src/variography/model_variograms/: aniso_fitter.rs  composite.rs  composite_iso.rs  iso_composite.rs  iso_exponential.rs  iso_fitter.rs  iso_gaussian.rs  iso_nugget.rs  iso_spherical.rs  mod.rs  nugget.rs  optimizer.rs  spherical.rs
