[package]
name = "terrustrial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true
lto = "fat"
incremental = true


[features]
# default = ["simba", "simba/wide"]
# portable_simd = ["simba", "simba/portable_simd"]

[dependencies]
# Linalg
faer = "0.22.6"
dyn-stack = "0.13.0"

# Math
rstar = { version = "0.12.0", features = ["serde"] }
rand = "0.8.5"
rand_distr = "0.4.3"
num-traits = "0.2.15"
ultraviolet = { version = "0.10.0", features = ["f64", "mint"] }

# Utils
serde = { version = "1", features = ["derive"] }
ordered-float = "3.7.0"
itertools = "0.11.0"
permutation = "0.4.1"
indicatif = { version = "0.17.5", features = ["rayon"] }
rayon = "1.8.1"
csv = "1.2.2"
wide = "0.7.32"
